--- a/formulir.html
+++ b/formulir.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="sidebar-menu">
                     <ul>
-                        <li><a href="./idola.html" target="_blank">Kyrie Irving</a></li>
+                        <li><a href="./index.html" target="_blank">Kyrie Irving</a></li>
                         <li><a href="#">Join With Us</a></li>
                         <li><a href="./member.html" target="_blank">Member</a></li>
                     </ul>
