--- a/member.html
+++ b/member.html
@@ -34,7 +34,7 @@
             </div>
             <div class="sidebar-menu">
                 <ul>
-                    <li><a href="./idola.html" target="_blank">Kyrie Irving</a></li>
+                    <li><a href="./index.html" target="_blank">Kyrie Irving</a></li>
                     <li><a href="./formulir.html" target="_blank">Join With Us</a></li>
                     <li><a href="#">Member</a></li>
                 </ul>
